--- a/tests/drivers/build_all/sensor/prj.conf
+++ b/tests/drivers/build_all/sensor/prj.conf
@@ -36,6 +36,7 @@ CONFIG_FXOS8700=y
 CONFIG_HMC5883L=y
 CONFIG_HP206C=y
 CONFIG_HTS221=y
+CONFIG_HX711=y
 CONFIG_ICM42605=y
 CONFIG_ICM42605_TRIGGER_NONE=y
 CONFIG_IIS2DH=y
